# toi

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  build.sh  docker-compose.test.yaml  docker-compose.yaml
.github/workflows/: ci.yml
assets/: demo.tape
shapa/: Cargo.toml
shapa_client/: Cargo.toml
shapa_server/: Cargo.toml  diesel.toml
shapa_server/migrations/: 20250308152427_notes.sql
shapa_server/migrations/2025-03-10-151241_notes/: down.sql  up.sql
shapa_server/src/: main.rs  models.rs
shapa_server/src/ops/: notes.rs
toi/: Cargo.toml  README.md
toi/src/: lib.rs
toi/src/models/: client.rs
toi_client/: Cargo.toml  README.md
toi_client/src/: main.rs  models.rs
toi_client/src/models/: client.rs  repl.rs
toi_server/: Cargo.toml  Dockerfile  README.md  diesel.toml  toi.json
toi_server/data/: aliases.txt
toi_server/migrations/2025-03-10-151241_openapi/: down.sql  up.sql
toi_server/migrations/2025-04-15-130108_notes/: up.sql
toi_server/migrations/2025-04-15-130108_openapi/: down.sql  up.sql
toi_server/migrations/2025-04-25-130203_todos/: up.sql
toi_server/migrations/2025-05-03-143829_contacts/: up.sql
toi_server/migrations/2025-05-03-143833_events/: down.sql  up.sql
toi_server/migrations/2025-05-10-141933_news/: down.sql  up.sql
toi_server/migrations/2025-05-22-114159_banking/: down.sql  up.sql
toi_server/migrations/2025-05-23-155213_tags/: up.sql
toi_server/migrations/2025-05-23-211638_cooking/: down.sql  up.sql
toi_server/migrations/2025-05-23-211638_recipes/: up.sql
toi_server/migrations/2025-06-02-012731_places/: up.sql
toi_server/src/: client.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  state.rs  utils.rs
toi_server/src/models/: accounts.rs  assist.rs  assistant.rs  attendees.rs  chat.rs  client.rs  config.rs  contacts.rs  dates.rs  datetime.rs  events.rs  news.rs  notes.rs  openapi.rs  participants.rs  places.rs  prompts.rs  recipes.rs  search.rs  state.rs  tags.rs  todos.rs  transactions.rs  weather.rs
toi_server/src/routes/: accounts.rs  assist.rs  assistant.rs  attendees.rs  chat.rs  contacts.rs  dates.rs  datetime.rs  events.rs  news.rs  notes.rs  participants.rs  places.rs  recipes.rs  tags.rs  todos.rs  transactions.rs  weather.rs
toi_server/tests/: accounts.rs  attendees.rs  contacts.rs  datetime.rs  events.rs  notes.rs  participants.rs  places.rs  recipes.rs  tags.rs  todos.rs  transactions.rs  utils.rs
toi_server/tests/routes/: notes.rs
