[package]
name = "shapa_server"
version = "0.1.0"
edition = "2024"
description = "A server for self-hosting private assistants"
repository = "https://github.com/theOGognf/shapa"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = "1.0.218"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = "1.43.0"
