[package]
name = "toi"
version = "0.1.0"
edition = "2024"
description = "A library for self-hosting private assistants"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde-query = "0.2.0"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
