[package]
name = "toi"
version = "0.1.0"
edition = "2024"
description = "A library for personal assistant clients and servers"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bon = "3.6.3"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.140"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
