[package]
name = "toi"
version = "0.1.1-alpha.1"
edition = "2024"
description = "A library for personal assistant clients and servers"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bon = "3.6.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = "5.3.1"
