[package]
name = "toi_client"
version = "0.1.0"
edition = "2024"
description = "A client for chatting with self-hosted private assistants"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
reqwest = "0.12.12"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toi = { version = "0.1.0", path = "../toi" }
tokio = "1.43.0"
