[package]
name = "toi_client"
version = "0.1.0"
edition = "2024"
description = "A client for chatting with personal assistants"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
ctrlc = "3.4.5"
futures = "0.3.31"
pico-args = "0.5.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.140"
toi = { version = "0.1.0", path = "../toi" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = "0.7.14"
