[package]
name = "toi_client"
version = "0.1.1-alpha.1"
edition = "2024"
description = "A REPL client for streaming OpenAI-compliant chat completions"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
ctrlc = "3.4.5"
dirs-next = "2.0.0"
futures = "0.3.31"
pico-args = "0.5.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toi = { version = "0.1.1-alpha.1", path = "../toi" }
tokio = { version = "1.43.0", features = ["macros", "sync"] }
tokio-util = "0.7.14"
