[package]
name = "toi_server"
version = "0.1.0"
edition = "2024"
description = "A server for personal assistants"
repository = "https://github.com/theOGognf/toi"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bb8 = "0.8"
bon = "3.6.3"
chrono = { version = "0.4.40", features = ["serde"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
diesel = { version = "2.2.8", features = ["chrono", "postgres", "serde_json"] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
envsubst = "0.2.1"
petname = { version = "2.0.2", default-features = false, features = ["default-rng", "default-words"] }
pgvector = { version = "0.4.0", features = ["diesel", "serde"] }
reqwest = { version = "0.12.14", features = ["json", "rustls-tls", "stream"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
toi = { version = "0.1.0", path = "../toi" }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }

[dev-dependencies]
serial_test = "3.2.0"
